# muscle-master-v3

./: .gitignore  CMakeLists.txt  partitions.csv  readme.md  sample.json  sdkconfig
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
main/App/: Events.cpp  Events.h  FileTransferManager.cpp  FileTransferManager.h  InternetManager.cpp  InternetManager.h  InventoryFileManager.cpp  InventoryFileManager.h  PowerManager.cpp  PowerManager.h  ProgramController.cpp  ProgramController.h  SalesFileManager.cpp  SalesFileManager.h  Sqlite.cpp  Sqlite.h
main/App/Drivers/: BatHealth.cpp  BatHealth.h  HttpClient.cpp  HttpClient.h  KeypadCharacter.cpp  KeypadCharacter.h  LCDFrameDisplay.cpp  LCDFrameDisplay.h  Pmic.cpp  Pmic.h  RtcModule.cpp  RtcModule.h  WiFiManager.cpp  WiFiManager.h
main/App/Drivers/usb/: usb_driver.c  usb_driver.h
main/App/State/: ChildState.h  ChildStateAnnex.h  State.h  StateController.cpp  StateController.h  StateTemp.h
main/App/State/Menu/: Calculator.cpp  Calculator.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h
main/App/State/Menu/Inventory/: Inventory.cpp  Inventory.h  ItemListsManager.cpp  ItemListsManager.h  ProductDetail.cpp  ProductDetail.h  Table.cpp  Table.h  TotalPrice.cpp  TotalPrice.h
main/App/State/Menu/Sales/: ItemListsManager.cpp  ProductDetail.cpp  ProductDetail.h  Sales.cpp  Sales.h  Table.cpp  Table.h  TotalPrice.cpp  TotalPrice.h
main/App/State/Startup/: Launch.cpp  Launch.h  Register.cpp  Register.h  Startup.cpp  Startup.h
main/Bsp/: Board.cpp  Board.h  Fatfs.cpp  Fatfs.h  GpioPin.cpp  GpioPin.h  I2c.cpp  I2c.h  Logger.cpp  Logger.h  PinNames.h  Spi.cpp  Spi.h  StateEnums.h  Timer.cpp  Timer.h
userdetails/: nvs_data.csv
