idf_component_register(SRCS "app_main.cpp"
                            "App/ProgramController.cpp"
                            "App/Events.cpp"
                            "App/InternetManager.cpp"
                            "App/FileTransferManager.cpp"
                            "App/InventoryFileManager.cpp"
                            "App/PowerManager.cpp"
                            "App/Sqlite.cpp"
                            "App/Drivers/BatHealth.cpp"
                            "App/Drivers/Pmic.cpp"
                            "App/Drivers/usb/usb_driver.c"
                            "App/Drivers/KeypadCharacter.cpp"
                            "App/Drivers/LCDFrameDisplay.cpp"
                            "App/Drivers/RtcModule.cpp"
                            "App/Drivers/WiFiManager.cpp"
                            "App/Drivers/HttpClient.cpp"
                            "App/State/StateController.cpp"
                            "App/State/Menu/Menu.cpp"
                            "App/State/Menu/Inventory/Inventory.cpp"
                            "App/State/Menu/Inventory/Table.cpp"
                            "App/State/Menu/Inventory/ProductDetail.cpp"
                            "App/State/Menu/Inventory/TotalPrice.cpp"
                            "App/State/Menu/Inventory/ItemListsManager.cpp"
                            "App/State/Menu/Calculator.cpp"
                            "App/State/Menu/Settings.cpp"
                            "App/State/Startup/Startup.cpp"
                            "App/State/Startup/Launch.cpp"
                            "App/State/Startup/Register.cpp"
                            "Bsp/GpioPin.cpp"
                            "Bsp/Spi.cpp"
                            "Bsp/I2c.cpp"
                            "Bsp/Logger.cpp"
                            "Bsp/Fatfs.cpp"
                            "Bsp/NvsFlashManager.cpp"
                            "Bsp/Timer.cpp"
                            "Library/cJSON.c"

                    INCLUDE_DIRS "."
                                 "./App"
                                 "./App/Drivers"
                                 "./App/Drivers/usb"
                                 "./App/State"
                                 "./App/State/Menu"
                                 "./App/State/Menu/Inventory"
                                 "./App/State/Startup"
                                 "./App/State/Shutdown"
                                 "./Bsp/"
                                 "./Library/"
                                
                    )
#component_compile_options("-DFW_VERSION=\"v1.0\"")

fatfs_create_spiflash_image(storage ../folder FLASH_IN_PROJECT)
nvs_create_partition_image(nvs ../userdetails/nvs_data.csv FLASH_IN_PROJECT)